[tool.poetry]
name = "repl_python3_bitcoin-private-key-public-key-and-address-generation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bitcoin = "^1.1.42"
qrcode = "^6.1"
urllib3 = "^1.26.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
